--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
     <ion-grid>
         <ion-row>
             <ion-col col-lg-4 col-md-6 col-sm-12 *ngFor="let hymnal of hymnalList">
-                <ion-card (click)="setActiveHymnal(hymnal.id)">
+                <ion-card (click)="setActiveHymnal(hymnal.id)" [ngClass]="{ 'active': (activeHymnal == hymnal.id) }">
                     <div class="card-image">
                         <img src="{{ 'assets/' + hymnal.image}}" />
                     </div>
