--- a/src/pages/input-modal/input-modal.html
+++ b/src/pages/input-modal/input-modal.html
@@ -37,40 +37,8 @@
             <p class="indicator">{{ getIndicator() }}</p>
             <!-- <ion-infinite-scroll (ionInfinite)="hymnsInfinite($event)">
                 <ion-infinite-scroll-content></ion-infinite-scroll-content>
-            </ion-infinite-scroll> -->
-
-            <div class="keyboard">
-                <div class="keys">
-                    <button class="key" aria-valuetext="1">1</button>
-                    <button class="key" aria-valuetext="2">2</button>
-                    <button class="key" aria-valuetext="3">3</button>
-                    <button class="key" aria-valuetext="s">s</button>
-                </div>
-                <div class="keys">
-                    <button class="key" aria-valuetext="4">4</button>
-                    <button class="key" aria-valuetext="5">5</button>
-                    <button class="key" aria-valuetext="6">6</button>
-                    <button class="key" aria-valuetext="t">t</button>
-                </div>
-                <div class="keys">
-                    <button class="key" aria-valuetext="7">1</button>
-                    <button class="key" aria-valuetext="8">2</button>
-                    <button class="key" aria-valuetext="9">3</button>
-                    <button class="key" aria-valuetext="f">f</button>
-                </div>
-                <div class="keys">
-                    <button class="key" aria-valuetext="b">
-                        <span class="fa fa-long-arrow-left"></span>
-                    </button>
-                    <button class="key" aria-valuetext="0">0</button>
-                    <button class="key" aria-valuetext="c">
-                        <span class="fa fa-close"></span>
-                    </button>
-                    <button class="key" aria-valuetext="e">
-                        <span class="fa fa-check"></span>
-                    </button>
-                </div>
-            </div>
+            </ion-infinite-scroll> -->            
+            <keyboard></keyboard>            
         </div>
         <div *ngSwitchCase="'bookmarks'">
             <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search bookmarks" type="number" [(ngModel)]="bkmkFilterText" #bkmkFilter></ion-searchbar>
