--- a/src/pages/input-modal/input-modal.html
+++ b/src/pages/input-modal/input-modal.html
@@ -27,7 +27,12 @@
 <ion-content padding>
     <div [ngSwitch]="inputType">
         <div *ngSwitchCase="'all_hymns'" #allHymns>
-            <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search hymn" type="number" [(ngModel)]="hymnTextFilter" #hymnFilter></ion-searchbar>
+            <!-- <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search hymn" type="number" [(ngModel)]="hymnTextFilter" #hymnFilter></ion-searchbar> -->
+            <div class="input-labels">
+                <label class="input-label" (click)="showKeyboard()">
+                    {{ hymnFilterString }}
+                </label>
+            </div>
             <ion-list>
                 <ion-item *ngFor="let hymn of hymnList | slice:0:hymnLimit;" (click)="setActiveHymn(hymn['id'])">
                     <h2>{{ 'Hymn #' + hymn.title }}</h2>
@@ -38,7 +43,7 @@
             <!-- <ion-infinite-scroll (ionInfinite)="hymnsInfinite($event)">
                 <ion-infinite-scroll-content></ion-infinite-scroll-content>
             </ion-infinite-scroll> -->            
-            <keyboard></keyboard>            
+            <keyboard (outputChange)="handleKeyChange($event)" [keyboardView]="keyboardView"></keyboard>            
         </div>
         <div *ngSwitchCase="'bookmarks'">
             <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search bookmarks" type="number" [(ngModel)]="bkmkFilterText" #bkmkFilter></ion-searchbar>
