--- a/src/pages/input-modal/input-modal.html
+++ b/src/pages/input-modal/input-modal.html
@@ -11,7 +11,7 @@
       </button>
     </ion-buttons>
     <ion-segment [(ngModel)]="inputType">
-        <ion-segment-button value="all_hymns" (ionSelect)="allHymnSelect()">
+        <ion-segment-button value="all_hymns">
             All hymns
         </ion-segment-button>
         <ion-segment-button value="bookmarks">
@@ -43,7 +43,7 @@
             <!-- <ion-infinite-scroll (ionInfinite)="hymnsInfinite($event)">
                 <ion-infinite-scroll-content></ion-infinite-scroll-content>
             </ion-infinite-scroll> -->            
-            <keyboard (outputChange)="handleKeyChange($event)" [keyboardView]="keyboardView"></keyboard>            
+            <keyboard (outputChange)="handleKeyChange($event)" [(keyboardView)]="keyboardShow"></keyboard>            
         </div>
         <div *ngSwitchCase="'bookmarks'">
             <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search bookmarks" type="number" [(ngModel)]="bkmkFilterText" #bkmkFilter></ion-searchbar>
