initial alternative to keyboard; initial dynamic theme

--- a/src/pages/author-modal/author-modal.html
+++ b/src/pages/author-modal/author-modal.html
@@ -29,4 +29,8 @@
       </p>
     </ion-card-content>
   </ion-card>
+
+  <div class="disclaimer">
+      <p>Disclaimer: hymnals here are not owned by application developer</p>
+  </div>
 </ion-content>
