--- a/src/pages/input-modal/input-modal.html
+++ b/src/pages/input-modal/input-modal.html
@@ -27,12 +27,12 @@
 <ion-content padding>
     <div [ngSwitch]="inputType">
         <div *ngSwitchCase="'all_hymns'" #allHymns>
-            <!-- <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search hymn" type="number" [(ngModel)]="hymnTextFilter" #hymnFilter></ion-searchbar> -->
-            <div class="input-labels">
+            <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search hymn" type="number" [(ngModel)]="hymnTextFilter" #hymnFilter></ion-searchbar>
+            <!-- <div class="input-labels">
                 <label class="input-label" (click)="showKeyboard()">
                     {{ hymnFilterString }}
                 </label>
-            </div>
+            </div> -->
             <ion-list>
                 <ion-item *ngFor="let hymn of hymnList | slice:0:hymnLimit;" (click)="setActiveHymn(hymn['id'])">
                     <h2>{{ 'Hymn #' + hymn.title }}</h2>
