--- a/src/pages/input-modal/input-modal.html
+++ b/src/pages/input-modal/input-modal.html
@@ -35,7 +35,7 @@
             </div> -->
             <ion-list>
                 <ion-item *ngFor="let hymn of hymnList | slice:0:hymnLimit;" (click)="setActiveHymn(hymn['id'])">
-                    <h2>{{ 'Hymn #' + hymn.title }}</h2>
+                    <h2>{{ 'Hymn #' + hymn.number }}</h2>
                     <p>{{ hymn.firstLine }}</p>
                 </ion-item>
             </ion-list>
@@ -43,7 +43,7 @@
             <!-- <ion-infinite-scroll (ionInfinite)="hymnsInfinite($event)">
                 <ion-infinite-scroll-content></ion-infinite-scroll-content>
             </ion-infinite-scroll> -->            
-            <keyboard (outputChange)="handleKeyChange($event)" [(keyboardView)]="keyboardShow"></keyboard>            
+            <!-- <keyboard (outputChange)="handleKeyChange($event)" [(keyboardView)]="keyboardShow"></keyboard> -->
         </div>
         <div *ngSwitchCase="'bookmarks'">
             <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search bookmarks" type="number" [(ngModel)]="bkmkFilterText" #bkmkFilter></ion-searchbar>
