--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>MobiHymn App</title>
-    <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: 'unsafe-eval' https://ssl.gstatic.com;">
+    <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: 'unsafe-eval' https://ssl.gstatic.com; default-src 'self'; img-src 'self'; script-src 'self'">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
