make more mobile friendly

--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-    <ion-searchbar (search)="getItems($event)" #searchHymn></ion-searchbar>
+    <ion-searchbar (search)="getItems($event)" #searchHymn [showCancelButton]="true" [animated]="true" placeholder="Search this hymnal"></ion-searchbar>
     <ion-list>
         <ion-list-header *ngIf="searchItems">{{ searchItems.length }} Result(s)</ion-list-header>
         <ion-item *ngFor="let item of searchItems" (click)="goToReader(item.id)">
