--- a/src/pages/input-modal/input-modal.html
+++ b/src/pages/input-modal/input-modal.html
@@ -27,7 +27,7 @@
 <ion-content padding>
     <div [ngSwitch]="inputType">
         <div *ngSwitchCase="'all_hymns'" #allHymns>
-            <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search hymn" type="number" [(ngModel)]="hymnTextFilter" #hymnFilter></ion-searchbar>
+            <ion-searchbar (keyup.enter)="preSetActiveHymn(hymnFilter.value)" (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search hymn" type="number" [(ngModel)]="hymnTextFilter" #hymnFilter></ion-searchbar>
             <!-- <div class="input-labels">
                 <label class="input-label" (click)="showKeyboard()">
                     {{ hymnFilterString }}
