--- a/www/assets/revision.html
+++ b/www/assets/revision.html
@@ -1,3 +1,14 @@
+<div class="revision">Version 0.7.5</div>
+<ul>
+    <li>Bug fixes</li>
+</ul>
+
+<div class="revision">Version 0.7.4</div>
+<ul>
+    <li>New app icon</li>
+    <li>Initial MIDI player</li>
+</ul>
+
 <div class="revision">Version 0.7.2</div>
 <ul>
     <li>Can select lyrics</li>
