--- a/platforms/ios/www/assets/revision.html
+++ b/platforms/ios/www/assets/revision.html
@@ -1,10 +1,32 @@
-<div class="revision">Version 0.8.0</div>
+<div class="revision">Version 0.7.5</div>
+<ul>
+    <li>Bug fixes</li>
+</ul>
+
+<div class="revision">Version 0.7.4</div>
+<ul>
+    <li>New app icon</li>
+    <li>Initial MIDI player</li>
+</ul>
+
+<div class="revision">Version 0.7.2</div>
+<ul>
+    <li>Can select lyrics</li>
+    <li>Can opt for app-provided font size</li>
+    <li>Splash screen disabled</li>
+</ul>
+
+<div class="revision">Version 0.7.0</div>
 <ul>
     <li>New appearance</li>
     <li>Bug fixes</li>
     <li>Correction for all of the hymns</li>
     <li>Can set number of items stored in history</li>
     <li>Swipe-to-slide navigation bar to tabs</li>
+    <li>Better file managment</li>
+    <li>Temporarily no MIDI</li>
+    <li>Temporarily cannot select text</li>
+    <li>Temporary icon and splash-screen</li>
 </ul>
 
 <div class="revision">Version 0.6.6</div>
@@ -34,21 +56,13 @@
 
 <div class="revision">Version 0.5.4</div>
 <ul>
-	<li>New look.</li>
-	<li>New set of icons</li>
-	<li>Bug fixes</li>
-	<li>Pinch-zoom and swiping feature temporarily disabled.</li>
-	<li>Improved searching feature</li>
-	<li>New input pad to input hymn numbers</li>
-	<li>Lyrics correction for some hymns</li>
-	<li>User can highlight to copy lyrics to clipboard</li>
-	<li>5 previously viewed hymns are kept in history</li>
-</ul>
-
-<div class="revision">Version 0.4.6</div>
-<ul>
-	<li>User can copy whole lyrics to clipboard.</li>
-	<li>Bug fixes</li>
-	<li>Lyrics correction for some hymns.</li>
-	<li>Files more organized.</li>
+    <li>New look.</li>
+    <li>New set of icons</li>
+    <li>Bug fixes</li>
+    <li>Pinch-zoom and swiping feature temporarily disabled.</li>
+    <li>Improved searching feature</li>
+    <li>New input pad to input hymn numbers</li>
+    <li>Lyrics correction for some hymns</li>
+    <li>User can highlight to copy lyrics to clipboard</li>
+    <li>5 previously viewed hymns are kept in history</li>
 </ul>
