android ios build

--- a/platforms/ios/www/assets/revision.html
+++ b/platforms/ios/www/assets/revision.html
@@ -1,6 +1,8 @@
-<div class="revision">Version 0.7.5</div>
+<div class="revision">Version 0.7.6</div>
 <ul>
     <li>Bug fixes</li>
+    <li>New fonts</li>
+    <li>Additional theme</li>
 </ul>
 
 <div class="revision">Version 0.7.4</div>
