--- a/src/pages/author-modal/author-modal.html
+++ b/src/pages/author-modal/author-modal.html
@@ -19,7 +19,7 @@
 
 <ion-content padding>
   <ion-card>
-    <img src="img/nin-live.png"/> 
+    <!-- <img src="img/nin-live.png"/>  -->
     <ion-card-content>
       <ion-card-title>
         Timothy John V. Gandionco
