--- a/src/pages/settings-popover-list/settings-popover-list.html
+++ b/src/pages/settings-popover-list/settings-popover-list.html
@@ -14,9 +14,10 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let setting of settingsList" (tap)="goToItems(setting)">
+    <ion-item *ngFor="let setting of settingsList" (tap)="goToItems(setting)" tappable>
         {{ setting }}
         <ion-icon name="arrow-forward"></ion-icon>
     </ion-item>
   </ion-list>
+  <!--<button ion-button (click)="alert('clicked');">Test</button>-->
 </ion-content>
