android ios build; intro slider (initial)

--- a/src/pages/settings-popover/settings-popover.html
+++ b/src/pages/settings-popover/settings-popover.html
@@ -5,7 +5,5 @@
   Ionic pages and navigation.
 -->
 <ion-content>
-    <ion-nav [root]="rootPage" [rootParams]="{'global': global}">
-
-    </ion-nav>
+    <ion-nav [root]="rootPage" [rootParams]="{'global': global}"></ion-nav>
 </ion-content>
