--- a/src/pages/input-modal/input-modal.html
+++ b/src/pages/input-modal/input-modal.html
@@ -46,6 +46,14 @@
             <!-- <keyboard (outputChange)="handleKeyChange($event)" [(keyboardView)]="keyboardShow"></keyboard> -->
         </div>
         <div *ngSwitchCase="'bookmarks'">
+            <!--<ion-refresher (ionRefresh)="refreshBookmarks()">
+                <ion-refresher-content
+                    pullingIcon="arrow-dropdown"
+                    pullingText="Pull to refresh"
+                    refreshingSpinner="circles"
+                    refreshingText="Refreshing...">
+                </ion-refresher-content>
+            </ion-refresher>-->
             <ion-searchbar (ionInput)="filterHymns($event)" [showCancelButton]="true" placeholder="Search bookmarks" type="number" [(ngModel)]="bkmkFilterText" #bkmkFilter></ion-searchbar>
             <ion-list>
                 <ion-item-sliding *ngFor="let bkmk of bookmarkList" (click)="setActiveHymn(bkmk['hymnId'])">
@@ -63,6 +71,14 @@
             </ion-list>
         </div>
         <div *ngSwitchCase="'recent'">
+            <!--<ion-refresher (ionRefresh)="refreshRecent()">
+                <ion-refresher-content
+                    pullingIcon="arrow-dropdown"
+                    pullingText="Pull to refresh"
+                    refreshingSpinner="circles"
+                    refreshingText="Refreshing...">
+                </ion-refresher-content>
+            </ion-refresher>-->
             <ion-list>
                 <ion-item *ngFor="let recent of recentList" (click)="setActiveHymn(recent['hymnId'])">
                     <h2>Hymn #{{ recent.hymnNumber }}</h2>
