--- a/src/pages/reader/reader.html
+++ b/src/pages/reader/reader.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header #readerHeader [@slideUp]="slideUpState">
-    <ion-navbar>
+    <ion-navbar color="dark">
         <ion-buttons start>
             <button ion-button icon-only (click)="presentPopover($event)" id="settings">
                 <span class="fa fa-font"></span>
