--- a/src/pages/author-modal/author-modal.html
+++ b/src/pages/author-modal/author-modal.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <ion-title>Author</ion-title>
     <ion-buttons end>
         <button ion-button icon-only (click)="dismiss()" clear>
