--- a/src/pages/revisions-modal/revisions-modal.html
+++ b/src/pages/revisions-modal/revisions-modal.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="dark">
     <ion-title>Revisions</ion-title>
     <ion-buttons end>
         <button ion-button icon-only (click)="dismiss()" clear>
