--- a/src/pages/reader/reader.html
+++ b/src/pages/reader/reader.html
@@ -40,14 +40,19 @@
 
 <ion-footer #footerReader>
     <ion-toolbar>
-        <div class="player">
-            <button ion-button clear>
-                <ion-icon name="play"></ion-icon>
-            </button>
-            <ion-range min="0" max="{{midi.duration}}" value="0" ion-Change step="1" (ionChange)="playerChange($event)">
-                <ion-label range-left>{{ secsToMins(curTime) }}</ion-label>
-                <ion-label range-right>{{ secsToMins(midi.duration) }}</ion-label>
-            </ion-range>
-        </div>
+        <audio-track #myAudio [track]="track">
+            <div class="controls">
+                <button ion-button icon-only (click)="myAudio.play()" clear *ngIf="!myAudio.isPlaying">
+                    <ion-icon name="play"></ion-icon>
+                </button>
+                <button ion-button icon-only (click)="myAudio.pause()" clear *ngIf="myAudio.isPlaying">
+                    <ion-icon name="pause"></ion-icon
+                ></button>
+            </div>
+            <div class="progress">
+                <audio-track-progress-bar duration progress audioTrack="myAudio">
+                </audio-track-progress-bar>
+            </div>
+        </audio-track>
     </ion-toolbar>
 </ion-footer>
