--- a/www/assets/revision.html
+++ b/www/assets/revision.html
@@ -1,3 +1,8 @@
+<div class="revision">Version 0.7.7</div>
+<ul>
+    <li>Slider intro</li>
+</ul>
+
 <div class="revision">Version 0.7.6</div>
 <ul>
     <li>Bug fixes</li>
