--- a/platforms/android/assets/www/assets/revision.html
+++ b/platforms/android/assets/www/assets/revision.html
@@ -1,6 +1,7 @@
 <div class="revision">Version 0.7.7</div>
 <ul>
     <li>Slider intro</li>
+    <li>Splash screen</li>
 </ul>
 
 <div class="revision">Version 0.7.6</div>
