on hymn change, change midi also

--- a/src/pages/midi-popover/midi-popover.html
+++ b/src/pages/midi-popover/midi-popover.html
@@ -15,7 +15,7 @@
         </ion-range>
       </ion-item>
     </ion-item-group>
-    <ion-item-group>
+    <!-- <ion-item-group>
       <ion-item-divider>Instrument</ion-item-divider>
       <ion-item>
         <ion-select [(ngModel)]="curInstru">
@@ -23,6 +23,6 @@
           <ion-option value="acoustic_guitar_nylon-mp3">Guitar</ion-option>
         </ion-select>
       </ion-item>
-    </ion-item-group>
+    </ion-item-group> -->
   </ion-list>
 </ion-content>
