--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,7 @@
             <ion-col col-lg-4 col-md-6 col-sm-12 *ngFor="let hymnal of hymnalList">
                 <ion-card (tap)="setActiveHymnal(hymnal.id)" [ngClass]="{ 'active': (activeHymnal == hymnal.id) }">
                     <div class="card-image">
-                        <img src="{{ 'assets/' + hymnal.image}}" />
+                        <img [src]="hymnal.image" [alt]="hymnal.name"/>
                     </div>
                     <ion-card-content>
                         <ion-card-title>
