hymnal items and images loader

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,13 +4,20 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+    <div class="banner" type="error" *ngIf="!isOnline">
+        No network connection detected.
+    </div>
+    <div class="banner" type="progress" *ngIf="isOnline && !hymnalList">
+        Loading hymnals...
+    </div>
     <ion-grid>
         <ion-row>
             <ion-col col-lg-4 col-md-6 col-sm-12 *ngFor="let hymnal of hymnalList">
                 <ion-card (tap)="setActiveHymnal(hymnal.id)" [ngClass]="{ 'active': (activeHymnal == hymnal.id) }">
                     <div class="card-image">
-                        <img [src]="hymnal.image" [alt]="hymnal.name"/>
+                        <img [src]="hymnal.image" [alt]="hymnal.name" (error)="updateImage($event)" #img/>
+                        <!-- <ion-icon name="book" *ngIf="!hymnal.image"></ion-icon> -->
                     </div>
                     <ion-card-content>
                         <ion-card-title>
