--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -5,4 +5,4 @@
     <ion-tab [root]="tab4Root" tabTitle="Settings" tabIcon="settings"></ion-tab>
 </ion-tabs>
 
-<intro-slider ng-if="isIntroHidden"></intro-slider>
+<intro-slider></intro-slider>
