--- a/src/pages/reader/reader.html
+++ b/src/pages/reader/reader.html
@@ -39,17 +39,17 @@
 
 <ion-footer #footerReader>
     <ion-toolbar>
-        <button ion-button clear (click)="playTrack()" *ngIf="mdiPlayer && mdiSound && !mdiPlayer.isPlaying()">
+        <button ion-button clear (tap)="playTrack()" *ngIf="mdiPlayer && mdiSound && !mdiPlayer.isPlaying()" [disabled]="currentHymn && !currentHymn['midi']">
             <ion-icon name="play"></ion-icon>
         </button>
-        <button ion-button clear (click)="pauseTrack()" *ngIf="mdiPlayer && mdiSound && mdiPlayer.isPlaying()">
+        <button ion-button clear (tap)="pauseTrack()" *ngIf="mdiPlayer && mdiSound && mdiPlayer.isPlaying()" [disabled]="currentHymn && !currentHymn['midi']">
             <ion-icon name="pause"></ion-icon>
         </button>
         <button ion-button clear *ngIf="!mdiSound">
             <span class="fa fa-spinner fa-pulse fa-2x"></span>
         </button>
 
-        <button ion-button clear (click)="stopTrack()" *ngIf="mdiPlayer && mdiSound" [disabled]="!mdiPlayer">
+        <button ion-button clear (tap)="stopTrack()" *ngIf="mdiPlayer && mdiSound" [disabled]="!mdiPlayer" [disabled]="currentHymn && !currentHymn['midi']">
             <ion-icon name="square"></ion-icon>
         </button>
 
@@ -58,7 +58,7 @@
             <ion-label range-right small>{{ secsToMins(mdiLength) }}</ion-label>
         </ion-range>
 
-        <button ion-button clear (click)="presentMidiPopover($event)">
+        <button ion-button clear (tap)="presentMidiPopover($event)" [disabled]="currentHymn && !currentHymn['midi']">
             <span class="fa fa-sliders fa-2x"></span>
         </button>
     </ion-toolbar>
