--- a/platforms/android/assets/www/assets/revision.html
+++ b/platforms/android/assets/www/assets/revision.html
@@ -3,7 +3,7 @@
     <li>Slider intro</li>
     <li>Splash screen</li>
     <li>Can play and manipulate MIDI</li>
-    <li>Files downloadable to SD Card</li>
+    <li>Hymnals downloadable to device</li>
 </ul>
 
 <div class="revision">Version 0.7.6</div>
