--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
   </script>-->
 
     <link href="build/main.css" rel="stylesheet">
-
+    <link href="assets/css/devices.min.css" rel="stylesheet" >
 </head>
 
 <body>
