--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
   </script>-->
 
     <link href="build/main.css" rel="stylesheet">
-
+    <link href="assets/css/devices.min.css" rel="stylesheet" >
 </head>
 
 <body>
